fix: footer content text align

--- a/css/global.css
+++ b/css/global.css
@@ -121,6 +121,7 @@ body {
   justify-content: center;
   width: 100%;
   padding: 50px 0;
+  text-align: center;
 }
 
 h1,
